chore: correcciones sonar